[gd_scene load_steps=6 format=3 uid="uid://eyyqoab7abnk"]

[ext_resource type="Script" path="res://ui.gd" id="1_tmvy3"]
[ext_resource type="Texture2D" uid="uid://cxghstcqdhkcu" path="res://icons/keyboard_key_z.png" id="2_qf64j"]
[ext_resource type="Texture2D" uid="uid://cwph1k3u5g8g6" path="res://icons/keyboard_key_s.png" id="3_su51p"]
[ext_resource type="Texture2D" uid="uid://bk5sdxmwejac" path="res://icons/keyboard_key_up.png" id="4_eopcm"]
[ext_resource type="Texture2D" uid="uid://5yprk65ql7iv" path="res://icons/keyboard_key_down.png" id="5_q3th0"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_tmvy3")

[node name="P1Score" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -950.0
offset_top = -341.0
offset_right = 311.0
offset_bottom = 341.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 500
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Score" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -341.0
offset_right = 798.0
offset_bottom = 341.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 500
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 151.0
offset_right = 168.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "START GAME"
icon_alignment = 1

[node name="StartTimer" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -136.5
offset_right = 142.5
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -321.0
offset_right = 308.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "player WINS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpriteZ" type="Sprite2D" parent="."]
position = Vector2(-550, 166)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_qf64j")

[node name="SpriteS" type="Sprite2D" parent="."]
position = Vector2(-550, 230)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_su51p")

[node name="SpriteUP" type="Sprite2D" parent="."]
position = Vector2(550, 166)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_eopcm")

[node name="SpriteDOWN" type="Sprite2D" parent="."]
position = Vector2(550, 230)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_q3th0")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
